# mcp-browser

./: .dockerignore  .env.example  .gitignore  .repomix-output.txt  CHANGELOG.md  Dockerfile  Makefile  ONE_LINE_INSTALL.md  README.md  WEBSOCKET_EVENTS.md  docker-compose.yml  example_mac_mini_setup.md  host_playwright_test.py  host_test.py  install.sh  install_helper.sh  install_mcp_browser.sh  install_one_line.sh  pyproject.toml  requirements-test.txt  run.sh  run_analysis.sh  simple_install.sh  simple_test.sh  test_api.sh  test_local.sh  test_mcp_events.sh  test_mcp_tools.sh  test_simple.sh
.github/PULL_REQUEST_TEMPLATE/: default.md
apparmor/: mcp-browser.profile
docker/: Dockerfile  network-config.yml  setup-network.sh  xvfb-init.sh
docker/apparmor/: mcp-browser.profile
docs/: api.md
docs/examples/: responsive_testing.py
examples/: README.md  event_subscription_example.py
mcp-browser/docker/: Dockerfile
memory-bank/: .neorules  active-context.md  mcp-browser-features.md  product-context.md  progress.md  project-brief.md  system-patterns.md  tech-context.md
src/: __init__.py  browser_pool.py  error_handler.py  integrate_components.py  integration.py  main.py  rate_limiter.py  simple_test.py  test_api.py  test_event_subscription.py  test_events.html  test_integration.py  test_lifespan.py  test_rate_limiting.py  test_websocket.py  test_websocket_client.py
tests/: conftest.py  debug_goto.py  test_network_isolation.py  test_resource_management.py
