[project]
name = "mcp-browser"
version = "0.1.0"
description = "Enterprise-grade secure browser automation for L3 AI coding agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.108.0",
    "uvicorn[standard]>=0.24.0",
    "playwright>=1.51.0",
    "python-jose>=3.4.0",
    "passlib>=1.7.4",
    "bcrypt>=4.3.0",
    "python-multipart>=0.0.20",
    "aiohttp>=3.11.14",
    "aiofiles>=24.1.0",
    "httpx>=0.28.1",
    "websockets>=15.0.1",
    "requests>=2.32.3",
    "pyyaml>=6.0",
    "mcp[cli]>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-v --tb=short --strict-markers --disable-warnings"
markers = [
    "asyncio: mark test as async",
    "timeout: mark test with timeout",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestDeprecationWarning",
    "ignore::pytest_asyncio.PytestDeprecationWarning",
]
asyncio_default_fixture_loop_scope = "function"
timeout = 60
timeout_method = "thread"
